IF(${OpenCV_FOUND})
	INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../wiic/)
	INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../log/)
	INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIR})

	SET(WIICML_SOURCES MLData.cpp MLAlg.cpp)
	ADD_LIBRARY(wiicml SHARED ${WIICML_SOURCES})
	TARGET_LINK_LIBRARIES(wiicml ${OpenCV_LIBS})

	INSTALL(TARGETS wiicml DESTINATION /usr/local/lib)
	INSTALL(FILES MLData.h DESTINATION /usr/local/include/wiic/)
	INSTALL(FILES MLAlg.h DESTINATION /usr/local/include/wiic/)
ENDIF(${OpenCV_FOUND})
